trunk/Archive2/e2/802f5f3a87c025/output
main.cpp: In function 'int main()':
main.cpp:9:18: error: 's' was not declared in this scope
     std::cout << s << '\n';
                  ^
